# ssr_anim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ssr.hpp
